@@ -10,8 +10,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.version>1.7.10</kotlin.version>
         <kotlin.code.style>official</kotlin.code.style>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <kotlin.compiler.incremental>false</kotlin.compiler.incremental>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -40,12 +40,12 @@
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-lambda-java-events</artifactId>
-            <version>3.8.0</version>
+            <version>3.11.0</version>
         </dependency>
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-lambda-java-runtime-interface-client</artifactId>
-            <version>2.0.0</version>
+            <version>2.1.1</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -142,11 +142,9 @@
                             <imageName>product-binary</imageName>
                             <mainClass>com.amazonaws.services.lambda.runtime.api.client.AWSLambda</mainClass>
                             <buildArgs combine.children="append">
-                                --verbose
-                                --no-fallback
-                                --initialize-at-build-time=org.slf4j
-                                --enable-url-protocols=http
-                                -H:+AllowIncompleteClasspath
+                                <arg>--initialize-at-build-time=org.slf4j</arg>
+                                <arg>--enable-url-protocols=http</arg>
+                                <arg>--add-opens java.base/java.util=ALL-UNNAMED</arg>
                             </buildArgs>
                         </configuration>
                     </plugin>
